--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,20 +1,3 @@
 <h2>Edit post</h2>
 
-<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
-  <% if @post.errors.any? %>
-    <% @post.errors.full_messages.each do |msg| %>
-      <div class="alert alert-danger"><%= msg %></div>
-    <% end %>
-  <% end %>
-  <p>
-    Name<br>
-    <%= f.text_field :title, :class => "form-control"%>
-  </p>
-  <p>
-    Post Text<br>
-    <%= f.text_area :body, :class => "form-control" %>
-  </p>
-  <p>
-    <%= f.submit :class => "btn btn-success" %>
-  </p>
-<% end %>
+<%= render 'form'%>
