--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,6 @@
 <h1><b>All our posts</b></h1>
-<% @posts.each do |post| %>
-  <div class="alert alert-light">
-    <h3><%= post.title %></h3>
-    <p><%= post.body %></p>
-    <%= link_to "Read more", post_path(post), :class => 'btn btn-outline-primary' %>
-  </div>
-<% end %>
+
+<%= render @posts %>
+
+
 
