--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,21 @@
   <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-bold">Simple Blog</h5>
+      <span class="p-2 text-dark" href="#"><%= link_to 'Main Page', posts_path %></span>
+      <span class="p-2 text-dark" href="#"><%= link_to 'Add new post', new_post_path %></span>
+      <span class="p-2 text-dark" href="#"><%= link_to 'About', about_path %></span>
       <nav class="my-2 my-md-0 mr-md-3">
-        <span class="p-2 text-dark" href="#"><%= link_to 'Main Page', home_path %></span>
-        <span class="p-2 text-dark" href="#"><%= link_to 'Add new post', new_post_path %></span>
-        <span class="p-2 text-dark" href="#"><%= link_to 'About', about_path %></span>
+        <% if user_signed_in? %>
+          <%= "Hello, #{current_user.email}! Not You?"  %>
+          <span><%= link_to 'Sign out', destroy_user_session_path, method: :delete, :class => 'btn btn-outline-primary' %> </span>
+        <% else %>
+          Hello, Guest
+          <span><%= link_to 'Sign up', new_user_registration_path, :class => 'btn btn-outline-primary' %> </span>
+          or
+          <span><%= link_to 'Sign in', new_user_session_path, :class => 'btn btn-outline-primary' %> </span>
+        <% end %>
+
+
       </nav>
     </div>
 
