--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,15 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
-<hr>
-<%= link_to "Edit", edit_post_path(@post), :class => 'btn btn-warning' %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, :class => 'btn btn-danger' %>
+<% if user_signed_in? %>
+  <hr>
+  <%= link_to "Edit", edit_post_path(@post), :class => 'btn btn-warning' %>
+  <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, :class => 'btn btn-danger' %>
+<% end %>
 <hr>
 <h2>All Comments</h2>
 <%= render @post.comments %>
-<hr>
-<h2>Add a comment</h2>
-<%= render 'comments/form' %>
+  <% if user_signed_in? %>
+  <hr>
+  <h2>Add a comment</h2>
+  <%= render 'comments/form' %>
+<% end %>
