add upload of images with carrierwave gem

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.editor {
+  min-height: 300px;
+}
+
+.img-show {
+  display: block;
+  margin-bottom: 2em;
+}
+
+.thumb {
+  float: left;
+  margin-right: 1em;
+}
