--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,9 @@
 <div class="alert alert-light">
   <h3><%= post.title %></h3>
-  <p><%= post.body %></p>
-  <%= link_to "Read more", post_path(post), :class => 'btn btn-outline-primary' %>
+  <div class="clearfix">
+    <%= image_tag  post.image.url(:thumb), class: 'img-thumbnail thumb' if post.image? %>
+    <%= post.body.html_safe %>
+    <%= link_to "Read more", post_path(post), :class => 'btn btn-outline-primary' %>
+  </div>
+  <hr>
 </div>
