--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @post.title %></h1>
 <%= image_tag  @post.image.url(:large), class: 'img-show' if @post.image? %>
 <p><%= @post.body.html_safe %></p>
-<% if user_signed_in? %>
+<% if user_signed_in? and current_user.admin%>
   <hr>
-  <%= link_to "Edit", edit_post_path(@post), :class => 'btn btn-warning' %>
-  <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, :class => 'btn btn-danger' %>
+  <%= link_to "Edit", edit_admin_post_path(@post), :class => 'btn btn-warning' %>
+  <%= link_to "Delete", admin_post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, :class => 'btn btn-danger' %>
 <% end %>
 <hr>
 <h2>All Comments</h2>
