--- a/app/views/admin/posts/_form.erb
+++ b/app/views/admin/posts/_form.erb
@@ -1,4 +1,4 @@
-<%= form_for @post, html: { multipart: true } do |f| %>
+<%= form_for [:admin, @post], html: { multipart: true } do |f| %>
   <% if @post.errors.any? %>
     <% @post.errors.full_messages.each do |msg| %>
       <div class="alert alert-danger"><%= msg %></div>
