--- a/app/views/admin/posts/_form.erb
+++ b/app/views/admin/posts/_form.erb
@@ -9,7 +9,8 @@
     <%= f.text_field :title, :class => "form-control"%>
   </p>
   <p>
-    Post Text<br>
+<!--    Post Text<br>-->
+    <%= f.label :body %>
     <%= f.trix_editor :body, :class => "editor" %>
   </p>
   <p>
